--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "emailjs-com": "^3.2.0",
+    "leaflet": "^1.9.3",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
