--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_KEY = FlixR0gCFpom5YFcp
-API_SERVICEID = default_service
-API_TEMPLATEID = template_zk4ygji
+REACT_APP_KEY = FlixR0gCFpom5YFcp
+REACT_APP_SERVICEID = default_service
+REACT_APP_TEMPLATEID = template_zk4ygji
 
 REACT_APP_STRAPI_SERVER = http://api.duenasconstrucciones.com
